update code about Order Management